# backend_nes

./: README.md  app.py  pyproject.toml  requirements.txt  test.db
static/css/: main.css
templates/: base.html  index.html
