[tool.poetry]
name = "Shopify Backend Challenge Fall 2022"
version = "1.0"
description = "CRUD application for Shopify Backend Challenge for internship fall 2022"
authors = ["Vinnie Ordobas"]

[tool.poetry.dependencies]
python = "^3.9"
distlib = "^0.3.4"
filelock = "^3.7.1"
platformdirs = "^2.5.2"
six = "^1.16.0"
click = "^8.1.3"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
importlib-metadata = "^4.11.4"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
SQLAlchemy = "^1.4.37"
Werkzeug = "^2.1.2"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
